--- a/secondspicker/src/main/res/layout/seconds_picker_dialog.xml
+++ b/secondspicker/src/main/res/layout/seconds_picker_dialog.xml
@@ -6,6 +6,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
+        android:layout_marginBottom="@dimen/_8sdp"
         style="@style/MyRounded.MaterialComponents.MaterialAlertDialog"
         android:layout_height="wrap_content">
 
@@ -15,7 +16,7 @@
             android:layout_height="match_parent"
             style="@style/MyRounded.MaterialComponents.MaterialAlertDialog"
             android:orientation="vertical"
-            android:background="@color/material_blue">
+            android:background="@color/material_orange">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -25,7 +26,7 @@
                 android:gravity="center_horizontal"
                 android:padding="@dimen/_12sdp"
                 android:textSize="@dimen/_16sdp"
-                android:textColor="@color/black">
+                android:textColor="@color/white">
             </TextView>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -123,15 +124,17 @@
                 android:paddingVertical="@dimen/_8sdp"
                 android:orientation="horizontal"
                 android:id="@+id/rbtnGrp"
+                android:background="@color/white"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:layout_height="wrap_content">
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:text="AM"
-                    android:buttonTint="@color/white"
+                    android:buttonTint="@color/material_orange"
                     android:id="@+id/rbtnAM"
                     android:fontFamily="sans-serif-black"
+
 
                     android:layout_height="wrap_content"/>
                 <RadioButton
@@ -139,7 +142,7 @@
                     android:text="PM"
                     android:id="@+id/rbtnPM"
                     android:layout_marginStart="@dimen/_20sdp"
-                    android:buttonTint="@color/white"
+                    android:buttonTint="@color/material_orange"
                     android:fontFamily="sans-serif-black"
                     android:layout_height="wrap_content"/>
             </RadioGroup>
@@ -158,8 +161,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_8sdp"
-                    android:background="@color/material_blue"
+                    android:background="@color/material_yellow_bright"
                     android:fontFamily="sans-serif"
                     android:paddingHorizontal="@dimen/_25sdp">
 
@@ -183,8 +185,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_8sdp"
-                    android:background="@color/material_blue"
+                    android:background="@color/material_yellow_bright"
                     android:fontFamily="sans-serif"
                     android:layout_marginStart="@dimen/_12sdp"
                     android:paddingHorizontal="@dimen/_25sdp">
