--- a/secondspicker/src/main/res/values/colors.xml
+++ b/secondspicker/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="material_blue">#EDDFFB</color>
+    <color name="material_yellow">#FF9900</color>
+    <color name="material_yellow_bright">#FEC107</color>
+    <color name="material_orange">#E65100</color>
+    <color name="material_grey_light">#C5C5C5</color>
 </resources>
